# mddiff

./: .gitignore  LICENSE  README.md  pyproject.toml
devlog/: DEVTOOLS.md  JOURNAL.md  PROJECT.md  RETROSPECTIVE.md  SDD.md
scripts/: release_check.py
src/mddiff/: __init__.py  cli.py  diff.py  inline.py  models.py  normalize.py  render.py  render_html.py
tests/: conftest.py  test_cli.py  test_cli_entry.py  test_diff.py  test_diff_internals.py  test_diff_regressions.py  test_inline_extra.py  test_inline_internals.py  test_models_extras.py  test_normalize.py  test_normalize_internals.py  test_performance.py  test_real_documents.py  test_render_html.py  test_render_html_boundaries.py  test_render_html_options.py
tests/fixtures/diff/: complex_left.md  complex_right.md  large_left.md  large_right.md
tests/fixtures/normalize/: list_indent_regression.md  lorem_document.md  regression_escaped_underscores.md
tests/fixtures/real_docs/: regression_math_subscripts.md
