[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mddiff"
version = "0.2.0"
description = "Markdown normalization and diff utilities"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Carl Scheffler" }]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=4",
    "coverage>=7",
]

[project.urls]
homepage = "https://example.com/mddiff"

[project.scripts]
mddiff = "mddiff.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "performance: Performance-sensitive regression checks",
]
addopts = [
    "--cov=mddiff",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]
